# kazu

./: .gitignore  Makefile  README.md  config.ini  pdm.lock.bak  pyproject.toml
.github/workflows/: auto-make-prerelease.yml  auto-merge.yml  build_on_push.yml
examples/: app_config.toml  app_config_zh_CN.toml  run_config.toml  run_config_zh_CN.toml
src/kazu/: __init__.py  __main__.py  assembly.py  callbacks.py  checkers.py  cli.py  compile.py  config.py  constant.py  hardwares.py  judgers.py  logger.py  resolvers.py  signal_light.py  static.py  visualize.py
tools/: version_inject.py
