[project]
name = "kazu"
version = "0.1.7"
description = "Default template for PDM package"
authors = [
    { name = "Whth", email = "88489697+Whth@users.noreply.github.com" },
]
dependencies = [
    "mentabotix>=0.1.5.17",
    "pyuptech>=0.1.6.3",
    "bdmc>=0.1.5.14",
    "coloredlogs>=15.0.1",
    "pydantic>=2.7.1",
    "click>=8.1.7",
    "toml>=0.10.2",
    "terminaltables>=3.1.10",
    "colorama>=0.4.6",
    "upicvision>=0.1.0.5",
    "pyserial>=3.5",
    "plantuml>=0.3.0",
    "six>=1.16.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=6.7.0",
    "viztracer>=0.16.3",
]
[project.scripts]
kazu = "kazu.cli:main"