[project]
name = "kazu"
version = "0.3.1"
description = "Default template for PDM package"
authors = [
    { name = "Whth", email = "88489697+Whth@users.noreply.github.com" },
]
dependencies = [
    "mentabotix>=0.1.7.2",
    "pyuptech>=0.1.6.5",
    "bdmc>=0.2.6",
    "coloredlogs>=15.0.1",
    "pydantic>=2.7.4",
    "click>=8.1.7",
    "toml>=0.10.2",
    "terminaltables>=3.1.10",
    "colorama>=0.4.6",
    "upicvision>=0.1.0.6",
    "pyserial>=3.5",
    "plantuml>=0.3.0",
    "six>=1.16.0",
    "pandas>=2.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=6.7.0",
    "viztracer>=0.16.3",
    "nuitka>=2.3.6",
    "pip>=24.1.1",
]
[project.scripts]
kazu = "kazu.cli:main"