[project]
name = "kazu"
version = "0.3.10"
description = "Wheeled bot controlling cli tool"
authors = [
    { name = "Whth", email = "88489697+Whth@users.noreply.github.com" },
]
dependencies = [
    "mentabotix>=0.1.7.3",
    "pyuptech>=0.1.6.5",
    "bdmc>=0.2.6",
    "coloredlogs>=15.0.1",
    "pydantic>=2.7.4",
    "click>=8.1.7",
    "terminaltables>=3.1.10",
    "colorama>=0.4.6",
    "upicvision>=0.1.0.6",
    "pyserial>=3.5",
    "plantuml>=0.3.0",
    "six>=1.16.0",
    "pandas>=2.2.2",
    "tomlkit>=0.13.2",
    "toml>=0.10.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { file = "LICENSE" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=6.7.0",
    "viztracer>=0.16.3",
    "nuitka>=2.3.6",
    "pip>=24.1.1",
    "ruff",
]
[project.scripts]
kazu = "kazu.cli:main"



[tool.ruff]
include = ["pyproject.toml","src/*.py"]
line-length = 120
target-version = "py311"
[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "W", # warnings
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "BLE", # flake8-blind-except
    "C90", # flake8-complexity
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "PLC", # convention
    "PLE", # error
    "PLR", # refactoring
    "PLW", # warning
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN401",
    "ANN003",
    "PYI063",
    "PYI021",
    "ASYNC109",
    "RUF001",
    "PYI019",
    "B008"
]
[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]
[tool.ruff.lint.pylint]
max-args = 8
